--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mac": "npx react-native run-macos"
   },
   "dependencies": {
+    "axios": "^1.7.5",
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-macos": "^0.73.0-0"
