--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mac": "npx react-native run-macos"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.53.1",
     "axios": "^1.7.5",
     "react": "18.3.1",
     "react-native": "0.75.2",
