--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.53.1",
+    "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.7.5",
     "react": "18.3.1",
     "react-native": "0.75.2",
-    "react-native-macos": "^0.73.0-0"
+    "react-native-macos": "^0.73.0-0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
