--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "mac": "npx react-native run-macos"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
     "@tanstack/react-query": "^5.53.1",
     "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.7.5",
     "react": "18.3.1",
     "react-native": "0.75.2",
+    "react-native-gesture-handler": "^2.19.0",
     "react-native-macos": "^0.75.0-0",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-screens": "^3.34.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
