--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.75.2",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.19.0",
     "react-native-macos": "^0.75.0-0",
     "react-native-render-html": "^6.3.4",
