--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mac": "npx react-native run-macos"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
@@ -44,6 +45,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
